Revision history for perl distribution Convos

4.23 Not Released
 - Add "script/convos upgrade" sub-command

4.22 2020-06-18T11:11:00+0900
 - Fix not generating new "uid" for the users on restart

4.21 2020-06-18T08:39:00+0900
 - Fix serving existing uploaded files

4.20 2020-06-18T08:31:00+0900
 - Fix hanging up a WebRTC call
 - Fix iOS issue where /login screen is rendered when actually logged in
 - Fix invalid social "image" for blog posts
 - Add formatting for <code> for the CMS
 - Converted short_checksum() to use sha1_sum
 - Fix generating random local secret for Docker
   You might want to regenerate your "local_secret" in
   $CONVOS_HOME/settings.json if you are using Docker

4.19 2020-06-10T08:39:00+0900
 - Fix rendering "Account" page on touch devices
 - Fix login/cms footer and header on small screens
 - Fix cpanfile for Text::Markdown
 - Bumped JSON::Validator and Mojolicious::Plugin::OpenAPI dependencies

4.18 2020-06-05T13:37:00+0900
 - New login and fallback page design that matches https://convos.chat
 - Fix <SelectField> click and filter issues
 - Fix reverse proxy detection for the first user
 - Perldoc rendering must be enabled with CONVOS_CMS_PERLDOC=1
 - Will scan for new blogs every 15 seconds

4.17 2020-06-03T10:35:00+0900
 - Fix absolute URL to social image from CMS
 - Fix not setting X-Provider-Name in CMS mode
 - Fix API links in POD
 - Fix "redirect_to" for CMS
 - Add TOC to cms pages and perldoc
 - Add shortcut for FontAwesome icon inside markdown
 - Can automatically pull description from the first paragraph
 - Reduce docker image size #492
 - Improved login screen design
 - Improved rendering of perldoc
 - Improved support for markdown inside tags
 - Replaced Text::MultiMarkdown with Text::Markdown since it is easier to install

4.16 2020-06-01T22:16:00+0900
 - Cannot load Module::Install directly

4.15 2020-06-01T22:07:00+0900
 - Add missing dependency

4.14 2020-06-01T21:56:00+0900
 - Add CMS functionality