@@ -367,3 +367,19 @@ input[type="file"]:-webkit-file-upload-button {
     bottom: 0;
   }
 }
+
+.progress {
+  background: var(--input-bg);
+  border: var(--input-border);
+  border-radius: var(--input-border-radius);
+}
+
+.progress__bar {
+  background: var(--button-bg);
+  color: var(--button-color);
+  text-align: right;
+  text-shadow: 0 1px 2px var(--button-bg);
+  padding-left: 4px;
+  padding-right: 4px;
+  overflow: visible;
+}
